fix: prevent horizontal scrolling on #reports-app

--- a/assets/src/js/admin/reports/app/style.scss
+++ b/assets/src/js/admin/reports/app/style.scss
@@ -1,3 +1,8 @@
+#reports-app {
+	position: relative;
+	overflow-x: hidden;
+}
+
 .givewp-inline-period-selector {
 	position: absolute;
 	top: 0;
